deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-mathapp
  labels:
    app: golang-mathapp
spec:
  ports:
    - port: 8010
      targetPort: 8010
  selector:
    app: golang-mathapp
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-mathapp
  labels:
    app: golang-mathapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-mathapp
  template:
    metadata:
      labels:
        app: golang-mathapp
    spec:
      containers:
        - image: soussioumaima/golang-mathapp:latest
          name: golang-mathapp
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 8010
              name: http
          volumeMounts:
            - name: golang-mathapp-persistent-storage
              mountPath: /data
      volumes:
        - name: golang-mathapp-persistent-storage
          persistentVolumeClaim:
            claimName: golang-mathapp-pv-claim
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: golang-mathapp
spec:
  ingressClassName: nginx
  rules:
    - host: oumaimasoussi-host.horizon-workspaces.com
      http:
        paths:
          - backend:
              service:
                name: golang-mathapp
                port:
                  number: 8010
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - oumaimasoussi-host.horizon-workspaces.com
      secretName: golang-mathapp-tls
